tests/NormalTests/paczka1/fuzzy1/11354395.err
Error in line 3: S546 A712 27,0
Error in line 4: CG4WUL S289 69,7
Error in line 27: D3NOpux7H S546 51,9
Error in line 34: E2CAkEmI A712 73,3
Error in line 22: CG4WUL A712 76,6
